# narya

./: .gitignore  .ocamlformat  .ocamlinit  CONTRIBUTING.md  README.md  dune  dune-project  flake.nix  narya.opam  static.patch
test/: church.ml  churchnat.ml  dune  gel.ml  idrefl.ml  natarith.ml  parametricity.ml  pmp.ml  sigma.ml  stream.ml  sym.ml  symsym.ml
test/black/: 1tuples.t  axiomK.t  binop.t  compile.t  depfunamb.t  discreteness.t  display.t  dune  echo.t  evalpi.t  hdpi.t  import.t  letin.t  letrec.t  modifiers.t  multierror.t  redef.t  require.t  section.t  synth.t  transparent.t  undo.t
test/black/churchnat_uniqueness.t/: churchnat_uniqueness.ny  run.t
test/black/dtt.t/: mutual.ny  run.t  sct.ny  sst.ny
test/black/elif-test.t/: test.ny
test/black/elif_test.t/: blank.ny  test.ny
test/black/gel.t/: gel.ny  run.t
test/black/hct.t/: 2dct.ny  2dsqrt.ny  run.t  (+8 more)
test/parser/: README.md  ambiguity.ml  commands.t  cube_variables.t  dune  echo.t  format_comments.expected  format_comments.ml  lexer.ml  notations.t  parse_arith.ml  parse_builtins.ml  parse_mcp.ml  permute_args.expected  permute_args.ml  prefixes.ml  reformat.expected  reformat.ml  unparse.expected  unparse.ml
test/testutil/: README.md  arith.ml  arity.ml  dune  lex.ml  mcp.ml  parseonly.ml  pmp.ml  print.ml  repl.ml  showparse.ml
test/white/: README.md  church.ml  churchnat.ml  constants.ml  degconst.ml  dune  errors.expected  errors.ml  gel.ml  idrefl.ml  letin.ml  list.ml  lst.ml  natarith.ml  parametricity.ml  parsetest.ml  readback.ml  sigma.ml  stream.ml  sym.ml  symsym.ml  vec.ml
(+267 files in other folders)
